# LIB-libasvtools

./: AUTHORS  Makefile  Makefile.am  Makefile.in  Makefile.os2  README.md  aclocal.m4  bootstrap.sh  build-os2.cmd  build-unix.sh  build-win32.bat  config.status  configure  configure.in  configure.lineno  libtool
src/: Makefile  Makefile.am  Makefile.in  Makefile.os2  asvtools.h  asvtools.h.in  asvtools.h.win32  base64.c  config.c  config.h  config.h.in  config.h.os2  config.h.win32  datetime.c  deflex.c  deflex.h  deflex.lo  domains.c  domains.lo  engine.c1  file_ops.c  filters.c  filters.lo  fnmatch.c  fsort.c  fsort.lo  http.c  inf.c  inf.lo  intcache.c  intcache.lo  libasvtools.la  mimetype.c  mimetype.lo  misc.c  patterns.c  patterns.lo  pidfile.c  pidfile.lo  regcomp.c  (+22 more)
src/.deps/: base64.Plo  config.Plo  datetime.Plo  deflex.Plo  domains.Plo  file_ops.Plo  filters.Plo  fnmatch.Plo  fsort.Plo  http.Plo  inf.Plo  intcache.Plo  mimetype.Plo  misc.Plo  patterns.Plo  pidfile.Plo  regcomp.Plo  regerror.Plo  regexec.Plo  regfree.Plo  stack.Plo  str_base.Plo  str_find_desc.Plo  str_shorten.Plo  tcpip.Plo  url.Plo  xfunc.Plo  xlf.Plo
src/.libs/: libasvtools.la  libasvtools.lai
tests/: Makefile  Makefile.am  Makefile.in  Makefile.os2  accumulate.c  accumulate.map  base64.c  base64.map  binchars.c  binchars.map  bracket.c  bracket.map  check_list.c  check_list.map  clock1.c  clock1.map  connect.c  connect.map  finddesc.c  finddesc.map  fnmatch1.c  fnmatch1.map  fprint_bits.c  fprint_bits.map  fsort.c  fsort.map  http_getdate.c  http_getdate.map  http_parse.c  http_parse.map  is_textfile.c  is_textfile.map  linebuf.c  linebuf.map  load_stdin.c  load_stdin.map  load_textfile.c  load_textfile.map  longprint.c  longprint.map  (+40 more)
tests/.deps/: accumulate.Po  base64.Po  binchars.Po  bracket.Po  check_list.Po  clock1.Po  connect.Po  finddesc.Po  fnmatch1.Po  fprint_bits.Po  fsort.Po  http_getdate.Po  http_parse.Po  is_textfile.Po  linebuf.Po  load_stdin.Po  load_textfile.Po  longprint.Po  math_routines.Po  merge.Po  mime.Po  parse_date.Po  pathdcmp.Po  pretty.Po  pretty_date.Po  psort.Po  ranges.Po  regex_test.Po  snprintf1.Po  sortfile.Po  str_parseline.Po  str_replace.Po  str_words.Po  subtree.Po  uniq.Po  unixentry.Po  vby.Po  xlf.Po
