EXTRA_DIST = Makefile.os2 config.h.win32 config.h.os2 asvtools.h.win32

lib_LTLIBRARIES 	= libasvtools.la

include_HEADERS = asvtools.h

libasvtools_la_SOURCES 	= asvtools.h base64.c config.c \
 domains.c file_ops.c misc.c fsort.c \
 inf.c datetime.c url.c patterns.c str_base.c tcpip.c pidfile.c http.c \
 str_find_desc.c str_shorten.c xfunc.c xlf.c stack.c \
 mimetype.c filters.c fnmatch.c intcache.c \
 regcomp.c regerror.c regex.h1 regexec.c regfree.c engine.c1 \
 deflex.h deflex.c
